# vlcrc

./: CMakeLists.txt
cmake/: FindLIBVLC.cmake
src/: main.cpp
